Commit translated content

--- a/powerapps-docs/administrator/TOC.yml
+++ b/powerapps-docs/administrator/TOC.yml
@@ -38,17 +38,19 @@
       href: admin-manage-apps.md
     - name: テナントまたは環境間でアプリを移動
       href: environment-and-tenant-migration.md
-    - name: システムで生成されたログに対する DSR 要求への対応
-      href: powerapps-gdpr-dsr-guide-systemlogs.md
-    - name: PowerApps 顧客データの DSR 要求への対応
-      href: powerapps-gdpr-dsr-guide.md
+    - name: DSR 要求への対応
       items:
-        - name: DSR 要求のエクスポートへの対応
-          href: powerapps-gdpr-export-dsr.md
-        - name: DSR 要求の削除への対応
-          href: powerapps-gdpr-delete-dsr.md
-    - name: PowerApps 顧客データに対する CDS の DSR 要求への対応
-      href: common-data-service-gdpr-dsr-guide.md
+        - name: システムで生成されたログ
+          href: powerapps-gdpr-dsr-guide-systemlogs.md
+        - name: PowerApps 顧客データ
+          href: powerapps-gdpr-dsr-guide.md
+          items:
+            - name: データのエクスポート
+              href: powerapps-gdpr-export-dsr.md
+            - name: データの削除
+              href: powerapps-gdpr-delete-dsr.md
+        - name: CDS for Apps 顧客データ
+          href: common-data-service-gdpr-dsr-guide.md
 - name: リファレンス
   items:
     - name: PowerApps 向け PowerShell のサポート (プレビュー)
