Commit translated content

--- a/powerapps-docs/guided-learning/TOC.yml
+++ b/powerapps-docs/guided-learning/TOC.yml
@@ -1,6 +1,6 @@
 - name: 概要
-  href: 'get-started.yml#step-1'
+  href: get-started.yml?tutorial-step=1
 - name: SharePoint からアプリを作成
-  href: 'create-app-sharepoint.yml#step-1'
+  href: create-app-sharepoint.yml?tutorial-step=1
 - name: アプリの管理
-  href: 'manage-apps.yml#step-1'
+  href: manage-apps.yml?tutorial-step=1
