--- a/powerapps-docs/maker/TOC.yml
+++ b/powerapps-docs/maker/TOC.yml
@@ -250,6 +250,10 @@
           href: ./common-data-service/data-platform-create-business-rule.md
         - name: カスタム エンティティの削除
           href: ./common-data-service/data-platform-delete-entity.md
+        - name: Excel でエンティティ データを開く
+          href: ./common-data-service/data-platform-excel-addin.md
+        - name: Power BI レポートを作成する
+          href: ./common-data-service/data-platform-powerbi-connector.md
     - name: リファレンス
       items:
         - name: Dynamics 365 ライセンスを必要とする制限付きのエンティティ
