--- a/powerapps-docs/guided-learning/create-app-sharepoint.yml
+++ b/powerapps-docs/guided-learning/create-app-sharepoint.yml
@@ -1,7 +1,7 @@
 ### YamlMime:Tutorial
 title: SharePoint からアプリを作成
 metadata:
-  title: SharePoint からアプリを作成 | Microsoft PowerApps
+  title: SharePoint からアプリを作成 | Microsoft Docs
   description: SharePoint リストから 3 画面アプリを作成して、そのアプリの詳細を確認して更新します。
   audience: Business User
   level: Beginner
@@ -9,17 +9,16 @@ metadata:
   nextTutorialTitle: アプリケーションを管理する
   displayType: one-column
   author: AFTOwen
-  manager: kfile
   ms.service: powerapps
   ms.component: canvas
   ms.topic: interactive-tutorial
   ms.date: 10/27/2017
   ms.author: anneta
-  ms.openlocfilehash: b801e40434e4e7b26db52f016af82b98e29f734f
-  ms.sourcegitcommit: 6a75c4c499bcdbeb9d65d3a9af47dedcf900f38d
+  ms.openlocfilehash: aeb576022f3abcf584bfa5104e1279f75b4bc035
+  ms.sourcegitcommit: e071ef560eef01c2b250ed50cf0e82f7263d5e4d
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 05/03/2018
+  ms.lasthandoff: 05/23/2018
 items:
 - durationInMinutes: 1
   content: >
