--- a/powerapps-docs/maker/TOC.yml
+++ b/powerapps-docs/maker/TOC.yml
@@ -233,6 +233,8 @@
               href: ./canvas-apps/functions/function-clock-calendar.md
             - name: Char
               href: ./canvas-apps/functions/function-char.md
+            - name: Choices
+              href: ./canvas-apps/functions/function-choices.md
             - name: Clear
               href: ./canvas-apps/functions/function-clear-collect-clearcollect.md
             - name: ClearCollect
@@ -594,6 +596,8 @@
           href: ./canvas-apps/connections-list.md
         - name: システム要件、制限、構成
           href: ./canvas-apps/limits-and-config.md
+        - name: セッション ID の取得
+          href: ./canvas-apps/get-sessionid.md
 - name: モデル駆動型アプリ
   href: ./model-driven-apps/model-driven-app-overview.md
   items:
