--- a/powerapps-docs/guided-learning/create-app-sharepoint.yml
+++ b/powerapps-docs/guided-learning/create-app-sharepoint.yml
@@ -9,17 +9,19 @@ metadata:
   nextTutorialTitle: アプリケーションを管理する
   displayType: one-column
   author: AFTOwen
+  manager: kvivek
   ms.service: powerapps
-  ms.component: canvas
+  ms.custom: canvas
   ms.topic: interactive-tutorial
   ms.date: 10/27/2017
   ms.author: anneta
-  ms.openlocfilehash: aeb576022f3abcf584bfa5104e1279f75b4bc035
-  ms.sourcegitcommit: 91a102426f1bc37504142cc756884f3670da5110
+  ms.reviewer: 
+  ms.openlocfilehash: 5ea088f73e44d09497808884e2442f57fbae9d1c
+  ms.sourcegitcommit: dfa0e1a7981814e15e6ca4720e2a5f930e859db1
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/26/2018
-  ms.locfileid: "34453632"
+  ms.lasthandoff: 07/13/2018
+  ms.locfileid: "39015388"
 items:
 - durationInMinutes: 1
   content: >
