--- a/powerapps-docs/maker/TOC.yml
+++ b/powerapps-docs/maker/TOC.yml
@@ -49,6 +49,11 @@
               href: ./canvas-apps/get-started-create-from-blank.md
         - name: アプリを共有する
           href: ./canvas-apps/share-app.md
+          items:
+            - name: Excel データの共有
+              href: ./canvas-apps/share-app-data.md
+            - name: アプリのリソースの共有
+              href: ./canvas-apps/share-app-resources.md
         - name: Power BI でアプリを埋め込む
           href: ./canvas-apps/embed-powerapps-powerbi.md
     - name: サンプル
@@ -73,6 +78,8 @@
           href: ./canvas-apps/working-with-variables.md
         - name: 数式
           href: ./canvas-apps/working-with-formulas-in-depth.md
+        - name: 試験的な機能とプレビュー機能
+          href: ./canvas-apps/working-with-experimental.md
         - name: 日付と時刻
           href: ./canvas-apps/show-text-dates-times.md
         - name: '[データ ソース]'
@@ -134,7 +141,9 @@
             - name: アクセシビリティ対応のアプリを作成する
               href: ./canvas-apps/accessible-apps.md
               items:
-                - name: 色
+                - name: アクセシビリティの問題を見つける
+                  href: ./canvas-apps/accessibility-checker.md
+                - name: アクセシビリティに対して色を使用する
                   href: ./canvas-apps/accessible-apps-color.md
         - name: アプリを管理する
           items:
@@ -614,13 +623,6 @@
 - name: Common Data Service for Apps
   href: ./common-data-service/data-platform-intro.md
   items:
-    - name: ライセンス
-      href: ./common-data-service/data-platform-entity-licenses.md
-      items:
-        - name: 複雑なビジネス ロジックを含むエンティティ
-          href: ./common-data-service/data-platform-complex-entities.md
-        - name: Dynamics 365 ライセンスを必要とする制限付きのエンティティ
-          href: ./common-data-service/data-platform-restricted-entities.md
     - name: クイック スタート
       items:
         - name: エンティティの作成
@@ -651,6 +653,13 @@
           href: ./common-data-service/data-platform-excel-addin.md
         - name: Power BI レポートを作成する
           href: ./common-data-service/data-platform-powerbi-connector.md
+    - name: ライセンス
+      href: ./common-data-service/data-platform-entity-licenses.md
+      items:
+        - name: 複雑なビジネス ロジックを含むエンティティ
+          href: ./common-data-service/data-platform-complex-entities.md
+        - name: Dynamics 365 ライセンスを必要とする制限付きのエンティティ
+          href: ./common-data-service/data-platform-restricted-entities.md
     - name: 開発者向け
       href: ../developer/common-data-service/TOC.yml
 - name: Common Data Model
