commit translated contents

--- a/powerapps-docs/administrator/TOC.yml
+++ b/powerapps-docs/administrator/TOC.yml
@@ -1,46 +1,30 @@
 - name: PowerApp の管理
-  href: index.md
-- name: クイック スタート
+  href: admin-guide.md
   items:
-    - name: 環境の作成
-      href: create-environment.md
-    - name: DLP ポリシーを作成する
-      href: create-dlp-policy.md
-    - name: テナント内のアクティブ ユーザーの表示
-      href: admin-view-user-licenses.md
-    - name: 環境内のアプリの表示
-      href: admin-view-apps.md
-- name: 概念
-  items:
-    - name: ライセンスの概要
-      href: pricing-billing-skus.md
-    - name: 環境の概要
-      href: environments-overview.md
-    - name: データ グループについて
-      href: introduction-to-data-groups.md
-    - name: リージョン概要
-      href: regions-overview.md
-- name: ハウツー ガイド
-  items:
-    - name: PowerApps の購入
-      href: signup-for-powerapps-admin.md
-    - name: 組織内のライセンスの管理
-      href: signup-question-and-answer.md
-    - name: DLP ポリシーの管理
-      href: prevent-data-loss.md
-    - name: データベースの作成
-      href: create-database.md
-    - name: 環境の管理
-      href: environments-administration.md
-    - name: 環境セキュリティの構成
-      href: database-security.md
-    - name: 組織内のアプリの管理
-      href: admin-manage-apps.md
-    - name: テナントまたは環境間でアプリを移動
-      href: environment-and-tenant-migration.md
-    - name: リソースのエクスポートとインポート
-      href: export-import-packages.md
+    - name: 概要
+      items:
+        - name: PowerApps 管理者のロールとは何ですか。
+          href: overview-role-powerapps-admin.md
+    - name: ライセンス
+      items:
+        - name: ライセンスの概要
+          href: pricing-billing-skus.md
+        - name: 組織内のライセンスの管理
+          href: signup-question-and-answer.md
+        - name: PowerApps の購入
+          href: signup-for-powerapps-admin.md
+    - name: PowerApps の管理
+      items:
+        - name: 環境内のアプリの表示
+          href: admin-view-apps.md
+        - name: 組織内のアプリの管理
+          href: admin-manage-apps.md
+        - name: テナントまたは環境間でアプリを移動
+          href: environment-and-tenant-migration.md
+        - name: PowerApps 向け PowerShell のサポート (プレビュー)
+          href: powerapps-powershell.md
     - name: DSR 要求への対応
+      href: powerapps-gdpr-dsr-guide-systemlogs.md
       items:
         - name: システムで生成されたログ
           href: powerapps-gdpr-dsr-guide-systemlogs.md
@@ -53,9 +37,27 @@
               href: powerapps-gdpr-delete-dsr.md
         - name: CDS for Apps 顧客データ
           href: common-data-service-gdpr-dsr-guide.md
-        - name: CDS for Apps のデータ統合
-          href: data-integration-gdpr-dsr-guide.md
-- name: リファレンス
-  items:
-    - name: PowerApps 向け PowerShell のサポート (プレビュー)
-      href: powerapps-powershell.md
+    - name: 環境の管理
+      href: environments-administration.md
+      items:
+        - name: 環境の概要
+          href: environments-overview.md
+        - name: リージョン概要
+          href: regions-overview.md
+        - name: 環境の作成
+          href: create-environment.md
+        - name: データベースの作成
+          href: create-database.md
+    - name: 環境セキュリティの構成
+      href: database-security.md
+      items:
+        - name: データ グループについて
+          href: introduction-to-data-groups.md
+        - name: DLP ポリシーを作成する
+          href: create-dlp-policy.md
+        - name: DLP ポリシーの管理
+          href: prevent-data-loss.md
+    - name: サブスクリプションとユーザー アカウントの管理
+      items:
+        - name: テナント内のアクティブ ユーザーの表示
+          href: admin-view-user-licenses.md
